--- a/Source/Parlay.targets
+++ b/Source/Parlay.targets
@@ -1,31 +1,43 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <RootDir Condition="'$(RootDir)' == ''">$(MSBuildThisFileDirectory)\..</RootDir>
+    <RootDir Condition="'$(RootDir)' == ''">$(MSBuildThisFileDirectory)\..\</RootDir>
   </PropertyGroup>
 
   <PropertyGroup>
-    <ArtifactsDir>$(RootDir)\Artifacts</ArtifactsDir>
-    <BuildDir>$(RootDir)\Build</BuildDir>
+    <ArtifactsDir>$(RootDir)\Artifacts\</ArtifactsDir>
+    <BuildDir>$(RootDir)\Build\</BuildDir>
     <KeyFileArgs Condition="'$(SignAssembly)' == 'true' And Exists('$(AssemblyOriginatorKeyFile)')">/keyfile:"$(AssemblyOriginatorKeyFile)"</KeyFileArgs>
-    <LibDir>$(RootDir)\Lib</LibDir>
-    <SourceDir>$(RootDir)\Source</SourceDir>
+    <LibDir>$(RootDir)\Lib\</LibDir>
+    <SourceDir>$(RootDir)\Source\</SourceDir>
   </PropertyGroup>
 
   <ItemGroup>
-    <SolutionProjects Include="$(SourceDir)\Parlay\Parlay.csproj" />
+    <SolutionProjects Include="$(SourceDir)Parlay\Parlay.csproj" />
+    <SolutionProjects Include="$(SourceDir)Parlay.Tests\Parlay.Tests.csproj" />
   </ItemGroup>
 
   <Import Project="$(MSBuildExtensionsPath32)\StyleCop\v4.7\StyleCop.Targets" />
-  <UsingTask TaskName="FxCop" AssemblyFile="$(LibDir)\FxCopTask.1.0.1\FxCopTask.dll" />
+  <UsingTask TaskName="FxCop" AssemblyFile="$(LibDir)FxCopTask.1.0.1\FxCopTask.dll" />
+  <UsingTask TaskName="GetVersion" AssemblyFile="$(LibDir)Tasty.0.14.5\Tasty.dll" />
 
   <Target Name="FxCop">
     <MSBuild Projects="@(SolutionProjects)" Targets="Clean;Build" Properties="Configuration=Debug"/>
 
     <ItemGroup>
-      <FxCopAssemblies Include="$(SourceDir)\Parlay\bin\Debug\Parlay.dll"/>
+      <FxCopAssemblies Include="$(SourceDir)Parlay\bin\Debug\Parlay.dll"/>
+      <FxCopAssemblies Include="$(SourceDir)Parlay.Tests\bin\Debug\Parlay.Tests.dll"/>
     </ItemGroup>
 
     <MakeDir Directories="$(ArtifactsDir)"/>
-    <FxCop Assemblies="@(FxCopAssemblies)" RuleSet="$(SourceDir)\Parlay.ruleset" Output="$(ArtifactsDir)\FxCop.xml"/>
+    <FxCop Assemblies="@(FxCopAssemblies)" RuleSet="$(SourceDir)Parlay.ruleset" Output="$(ArtifactsDir)FxCop.xml"/>
+  </Target>
+
+  <Target Name="GetVersion">
+    <GetVersion AssemblyInfoFile="$(RootDir)Source\SolutionInfo.cs">
+      <Output TaskParameter="Major" PropertyName="Major"/>
+      <Output TaskParameter="Minor" PropertyName="Minor"/>
+      <Output TaskParameter="Build" PropertyName="Build"/>
+      <Output TaskParameter="Revision" PropertyName="Revision"/>
+    </GetVersion>
   </Target>
 </Project>
