--- a/Lib/repositories.config
+++ b/Lib/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Source\Parlay.Tests\packages.config" />
+  <repository path="..\Source\Parlay\packages.config" />
 </repositories>
