--- a/Source/Parlay.Tests/Parlay.Tests.csproj
+++ b/Source/Parlay.Tests/Parlay.Tests.csproj
@@ -51,9 +51,9 @@
       <Link>Properties\SolutionInfo.cs</Link>
     </Compile>
     <Compile Include="DiskCacheTests.cs" />
-    <Compile Include="DownloadClientConfigurationTests.cs" />
+    <Compile Include="DownloadOptionsTests.cs" />
     <Compile Include="DownloadClientTests.cs" />
-    <Compile Include="ExtensionTests.cs" />
+    <Compile Include="ExtensionsTests.cs" />
     <Compile Include="MemoryCacheTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="CacheTests.cs" />
