--- a/Source/Parlay/Parlay.csproj
+++ b/Source/Parlay/Parlay.csproj
@@ -56,8 +56,9 @@
     <Compile Include="CacheItem.cs" />
     <Compile Include="CacheStatistics.cs" />
     <Compile Include="DiskCache.cs" />
-    <Compile Include="DownloadClientConfiguration.cs" />
+    <Compile Include="DownloadOptions.cs" />
     <Compile Include="DownloadClient.cs" />
+    <Compile Include="DownloadResult.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ICache.cs" />
     <Compile Include="MemoryCache.cs">
