--- a/Source/Parlay/Parlay.csproj
+++ b/Source/Parlay/Parlay.csproj
@@ -64,6 +64,7 @@
     <Compile Include="DownloadTask.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="ICache.cs" />
+    <Compile Include="ISqliteCacheStorage.cs" />
     <Compile Include="MemoryCache.cs">
       <SubType>Code</SubType>
     </Compile>
